# slt_tech_core

./: .gitmodules  CMakeLists.txt  README.md
include/slt/concur/: blocking_queue.h  event_queue.h
include/slt/concur/details/: blocking_queue_impl.h  event_queue_impl.h
include/slt/core/: core.h
include/slt/cpp/: map_utils.h
include/slt/cpp/details/: map_utils_impl.h
include/slt/debug/: assert.h  invariant.h  validated.h
include/slt/debug/details/: validated_impl.h
include/slt/file/: read.h  write.h
include/slt/file/details/: read_impl.h
include/slt/log/: log.h
include/slt/math/: angle.h  pi.h  vector.h
include/slt/math/details/: angle_impl.h  vector_impl.h
include/slt/mem/: alignment.h  data_block.h  data_view.h
include/slt/refl/: base_type.h  collection_type.h  enum_type.h  ptr_type.h  refl.h  reflected.h  string_type.h  struct_type.h  traits.h  type.h  type_lib.h
include/slt/settings/: settings.h
include/slt/settings/details/: setting_details.h  setting_impl.h
include/slt/string/: join.h  split.h  string_view.h
include/slt/units/: direction.h  distance.h  position.h
misc/: format_code.py
src/slt/concur/: CMakeLists.txt  blocking_queue_test.cpp  event_queue.cpp  event_queue_test.cpp
src/slt/core/: CMakeLists.txt  core.cpp  core_test.cpp
src/slt/cpp/: CMakeLists.txt  map_utils_test.cpp
src/slt/debug/: CMakeLists.txt  assert.cpp  assert_test.cpp  invariant_test.cpp  validated_test.cpp
src/slt/file/: CMakeLists.txt  file.cpp  file_internal.h
src/slt/log/: CMakeLists.txt  log.cpp  log_internal.h
src/slt/math/: CMakeLists.txt  angle_test.cpp
src/slt/mem/: CMakeLists.txt  alignment_test.cpp  data_view_test.cpp
src/slt/refl/: CMakeLists.txt  serialize_test.cpp  type.cpp  type_lib.cpp  typelib_test.cpp
src/slt/settings/: CMakeLists.txt  settings.cpp  settings_internal.h  settings_test.cpp
src/slt/string/: CMakeLists.txt  join_test.cpp  split.cpp  split_test.cpp  string_view_test.cpp
src/slt/units/: CMakeLists.txt  direction_test.cpp  distance_test.cpp
